# excel-template-filler

./: .clawignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
examples/: example_auto_link.py  example_basic.py  example_batch_pdf.py
examples/data/: sample_data.xlsx  sample_list.xlsx
examples/templates/: sample_template.xlsx
references/: api-usage.md  bq-merger.md  engines.md  structure.md
scripts/: render_preview.py
src/: auto_linker.py  file_grabber.py  template_filler.py  utils.py
src/engines/: __init__.py  base_engine.py  openpyxl_engine.py  zip_engine.py
src/exporters/: __init__.py  bq_merger.py
