[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-template-filler"
version = "2.1.0"
description = "Excel template filler with dual-engine architecture (openpyxl + ZIP). Batch fill Excel templates with perfect image/print-setting preservation."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["excel", "template", "fill", "batch", "openpyxl", "xlsx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
dependencies = [
    "openpyxl>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/David-CB666/excel-template-filler"
Repository = "https://github.com/David-CB666/excel-template-filler"
